# data-flow-control

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
benchmarks/execution/: README.md  aggregate_having.sql  join_remove.sql  kill_scan.sql  relation_udf_insert.sql  scan_remove.sql
developer-docs/: performance.md  policy-validation.md  python-api.md  rewrite-pipeline.md
docs/: README.md  documentation.html  examples.html  index.html  langchain-tool-use.md  performance.md  policy-validation.md  python-api.md  python-compatibility.md  rewrite-pipeline.md  site.js  strategy-selection.md  styles.css
examples/: ui_resolution_duckdb.py
install_testing/: README.md  pyproject.toml  smoke_test.py
passant-cli/: Cargo.toml
passant-cli/src/: main.rs
passant-cli/tests/: cli.rs
passant-core/: Cargo.toml
passant-core/benches/: rewrite_perf.rs
passant-core/src/: aggregate_registry.rs  catalog.rs  diagnostics.rs  explain.rs  full_push.rs  identifiers.rs  intern.rs  ir.rs  lib.rs  optimizer.rs  parser.rs  partial_push.rs  planner.rs  policy.rs  policy_compile.rs  policy_index.rs  policy_parser.rs  policy_pgn.pest  policy_store.rs  query_analysis.rs  rewrite_stats.rs  rewrite_strategy.rs  rewriter.rs  semiring.rs  source_set_index.rs  source_sets.rs  statement_tables.rs  threshold.rs
passant-core/src/policy_store/: branch.rs  compiled.rs  delete.rs  indexes.rs  memory.rs  mod.rs
passant-core/src/rewriter/: aggregates.rs  columns.rs  constraint_preprocess.rs  derived_policy.rs  dimensions.rs  exists.rs  expr.rs  finalize.rs  helpers.rs  limit.rs  mod.rs  plan.rs  policy_expr.rs  projection.rs  resolution.rs  scope.rs  select.rs  types.rs  write_path.rs
passant-core/src/rewriter/plan/: actions.rs  applicability.rs  dominance.rs  mod.rs  scope_plan.rs  write_plan.rs
passant-core/src/source_sets/: analysis.rs  annotations.rs  branch.rs  mod.rs  rewrites.rs  split.rs
passant-core/src/sql/: ast_stats.rs  builders.rs  columns.rs  dialect.rs  expr.rs  expr_key.rs  mod.rs  parse.rs  render.rs
passant-core/tests/: dialect.rs  explain_strategy.rs  indexed_candidate_differential.rs  insert_values_body.rs  paper_examples.rs  parser.rs  planner.rs  policy.rs  policy_dialect.rs  policy_store_memory.rs  rewrite_candidate_regression.rs  rewrite_fast_paths.rs  rewrite_large_registry.rs  rewrite_stats_timings.rs  scan_ready_expr.rs  source_set_split_no_parse.rs  sql_builders.rs  sql_columns.rs  ui_resolution.rs
passant-core/tests/common/: duckdb.rs  mod.rs
passant-core/tests/completion/: aggregate_policy.rs  conformance.rs  flowguard.rs  main.rs  partial_push.rs  pgn.rs  pgn_unique.rs  policy_storage.rs  rewrite_api_parity.rs  semiring.rs  source_sets.rs  sql_rewriter_parity.rs  symmetric_self_join.rs  threshold.rs  unique_not_unique.rs
passant-core/tests/execution/: aggregate_finalize.rs  insert.rs  invalidate.rs  kill.rs  main.rs  oracle.rs  remove.rs  update.rs
passant-core/tests/expected/sqlite/: remove_scan.sql
passant-core/tests/gaps/: column_propagation.rs  dimensions.rs  exists_join.rs  having_where.rs  identifiers.rs  insert_shapes.rs  main.rs  multi_source.rs  operators.rs  query_shapes.rs  scalar_subquery.rs
passant-core/tests/rewrite/: derived_policy.rs  in_semijoin.rs  insert.rs  joins.rs  main.rs  output.rs  recursive.rs  scan.rs  update.rs
passant-py/: Cargo.toml
passant-py/src/: lib.rs
python/data_flow_control/: __init__.py  aggregate_introspection.py  catalog.py  connection.py  options.py  planner.py  policy.py  ui.py
python/passant/: __init__.py  _rust.py  catalog.py  compat.py  connection.py  dialect.py  planner.py  policy.py
python/sql_rewriter/: __init__.py
python/tests/: conftest.py  docker_services.py  flock_support.py  kill_conformance.py  langchain_helpers.py  paper_helpers.py  test_aggregate_registry.py  test_backend_basic_conformance.py  test_backend_capabilities.py  test_capabilities.py  (+36 more)
scripts/: bench_bulk_register.py  bench_execute.py  bench_register_policy.py  check_perf_budgets.sh  install-pre-commit-hook.sh  run-integration-tests.sh  setup_flock.sh
(+36 files in other folders)
