[project]
name = "data-flow-control"
version = "0.1.0"
description = "Rust-backed Data Flow Control rewrite engine"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "duckdb>=1.3.0",
    "numpy>=1.24.4",
    "sqlglot==28.3.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7.0",
    "pytest>=8.4.2",
    "ruff>=0.11.0",
    "sql-rewriter",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]
clickhouse = [
    "clickhouse-connect>=0.7.0",
]
datafusion = [
    "datafusion>=53.0.0; python_version >= '3.10'",
    "pyarrow>=14.0.0",
]

[tool.uv.sources]
sql-rewriter = { path = "../sql_rewriter", editable = true }

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "passant-py/Cargo.toml"
python-source = "python"
module-name = "passant._passant"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python", "python/tests"]
markers = [
    "completion: tests that must pass before Passant is feature-complete",
    "postgres: requires psycopg and Passant docker postgres service",
    "clickhouse: requires clickhouse-connect and Passant docker clickhouse service",
    "umbra: requires psycopg and Passant docker umbra service",
    "flock: optional Flock DuckDB extension tests (see passant/scripts/setup_flock.sh)",
]

[tool.ruff]
line-length = 100
target-version = "py39"
