[project]
name = "data-flow-control"
version = "0.1.0"
description = "Rust-backed Data Flow Control rewrite engine"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26.0",
    "duckdb>=1.3.0",
    "langchain>=1.3,<2",
    "langchain-core>=1.3,<2",
    "numpy>=1.24.4",
    "sqlglot==28.3.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7.0",
    "pytest>=8.4.2",
    "ruff>=0.11.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]
clickhouse = [
    "clickhouse-connect>=0.7.0",
]
datafusion = [
    "datafusion>=53.0.0",
    "pyarrow>=14.0.0",
]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "passant-py/Cargo.toml"
python-source = "python"
module-name = "data_flow_control._passant"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python", "python/tests"]
markers = [
    "completion: tests that must pass before Passant is feature-complete",
    "postgres: requires psycopg and Passant docker postgres service",
    "clickhouse: requires clickhouse-connect and Passant docker clickhouse service",
    "umbra: requires psycopg and Passant docker umbra service",
    "flock: optional Flock DuckDB extension tests (see scripts/setup_flock.sh)",
    "ui_extension: optional extended_duckdb UI stream union tests",
    "langchain: LangChain tool-use integration tests",
]

[tool.ruff.lint.per-file-ignores]
"python/tests/test_langchain*.py" = ["E402"]
"python/tests/test_call_tool_with_dataflow.py" = ["E402"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["extended_duckdb"]
