[package]
name = "passant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "passant"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
passant-core = { path = "../passant-core" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
