[package]
name = "passant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
thiserror.workspace = true
roaring.workspace = true
smallvec = { workspace = true }

[features]
default = []
validate-indexed-candidates = []

[dev-dependencies]
duckdb.workspace = true
pretty_assertions.workspace = true
criterion.workspace = true

[[bench]]
name = "rewrite_perf"
harness = false
